--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,11 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+
+	/* Decorators */
+	"experimentalDecorators": true,
+	"emitDecoratorMetadata": true
   },
   "include": ["vite.config.ts"]
 }
